hphp/test/quick/asm_ret_type.hhas.expectf
Catchable fatal error: Value returned from function fail() must be of type int, HH\dict given in %s on line 6
